Terminal Saved Output_1.txt
Last login: Mon Apr  9 08:57:36 on console
Jong-Nis-MacBook-Air:~ n88151$ python
Python 2.7.14 (v2.7.14:84471935ed, Sep 16 2017, 12:01:12) 
[GCC 4.2.1 (Apple Inc. build 5666) (dot 3)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> ipython
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'ipython' is not defined
>>> exit
Use exit() or Ctrl-D (i.e. EOF) to exit
>>> exit()
Jong-Nis-MacBook-Air:~ n88151$ ipython

Python 2.7.13 |Anaconda, Inc.| (default, Sep 21 2017, 17:38:20) 
Type "copyright", "credits" or "license" for more information.

IPython 5.4.1 -- An enhanced Interactive Python.
?         -> Introduction and overview of IPython's features.
%quickref -> Quick reference.
help      -> Python's own help system.
object?   -> Details about 'object', use 'object??' for extra details.

In [1]: 

In [1]: x = [1, 3, 4, 5 ]

In [2]: x
Out[2]: [1, 3, 4, 5]

In [3]: x.sort
Out[3]: <function sort>

In [4]: x = [1,3,4,5, 'x',['other strings',1,3,3,4]]

In [5]: x
Out[5]: [1, 3, 4, 5, 'x', ['other strings', 1, 3, 3, 4]]

In [6]: del x[0]

In [7]: x
Out[7]: [3, 4, 5, 'x', ['other strings', 1, 3, 3, 4]]

In [8]: x
Out[8]: [3, 4, 5, 'x', ['other strings', 1, 3, 3, 4]]

In [9]: x pop()
  File "<ipython-input-9-ea53a334c011>", line 1
    x pop()
        ^
SyntaxError: invalid syntax


In [10]: x=[4, 5, ]

In [11]: 

In [11]: 

In [11]: x=y=2

In [12]: x
Out[12]: 2

In [13]: y
Out[13]: 2

In [14]: x = y = [1, 3, 4, 5]

In [15]: x.append(10000)

In [16]: x
Out[16]: [1, 3, 4, 5, 10000]

In [17]: y
Out[17]: [1, 3, 4, 5, 10000]

In [18]: id(x)
Out[18]: 4528110408

In [19]: a, b, c = 1, 2, 3

In [20]: a
Out[20]: 1

In [21]: b
Out[21]: 2

In [22]: c
Out[22]: 3

In [23]: x = (1,3,4,5)

In [24]: x = 1,2,4,5

In [25]: x
Out[25]: (1, 2, 4, 5)

In [26]: x + x
Out[26]: (1, 2, 4, 5, 1, 2, 4, 5)

In [27]: 

In [27]: x = ('key':1111)
  File "<ipython-input-27-5c8788eecd88>", line 1
    x = ('key':1111)
              ^
SyntaxError: invalid syntax


In [28]: x = {'key':1111}

In [29]: x
Out[29]: {'key': 1111}

In [30]: dict( x = 1, y = 2 )
Out[30]: {'x': 1, 'y': 2}

In [31]: zip?
Docstring:
zip(seq1 [, seq2 [...]]) -> [(seq1[0], seq2[0] ...), (...)]

Return a list of tuples, where each tuple contains the i-th element
from each of the argument sequences.  The returned list is truncated
in length to the length of the shortest argument sequence.
Type:      builtin_function_or_method

In [32]: zip( [1,2], ['a','b'])
Out[32]: [(1, 'a'), (2, 'b')]

In [33]: dict(zip( [1,2], ['a','b']))
Out[33]: {1: 'a', 2: 'b'}

In [34]: _
Out[34]: {1: 'a', 2: 'b'}

In [35]: 

In [35]: 

In [35]: >>> d1 = {'a':1, 'b':2, 'c':3}
    ...: >>> d2 = {'A':1, 'B':2, 'C':3}
    ...: 

In [36]: >>> dict(d1,**d2)
Out[36]: {'A': 1, 'B': 2, 'C': 3, 'a': 1, 'b': 2, 'c': 3}

In [37]: x = (1,2,4)

In [38]: y = (1,5,20)

In [39]: x. intersection y
  File "<ipython-input-39-9313ad020348>", line 1
    x. intersection y
                    ^
SyntaxError: invalid syntax


In [40]: x. union(y)
---------------------------------------------------------------------------
AttributeError                            Traceback (most recent call last)
<ipython-input-40-ea93b54a4d3d> in <module>()
----> 1 x. union(y)

AttributeError: 'tuple' object has no attribute 'union'

In [41]: x.intersection(y)
---------------------------------------------------------------------------
AttributeError                            Traceback (most recent call last)
<ipython-input-41-20bc87c2e0e0> in <module>()
----> 1 x.intersection(y)

AttributeError: 'tuple' object has no attribute 'intersection'

In [42]: clr
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-42-db8dbbed59a6> in <module>()
----> 1 clr

NameError: name 'clr' is not defined

In [43]: clr;
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-43-118c6abf6900> in <module>()
----> 1 clr;

NameError: name 'clr' is not defined

In [44]: x
Out[44]: (1, 2, 4)

In [45]: y
Out[45]: (1, 5, 20)

In [46]: x.intersection(y)
---------------------------------------------------------------------------
AttributeError                            Traceback (most recent call last)
<ipython-input-46-20bc87c2e0e0> in <module>()
----> 1 x.intersection(y)

AttributeError: 'tuple' object has no attribute 'intersection'

In [47]: intersection?
Object `intersection` not found.

In [48]: x.intersect(y)
---------------------------------------------------------------------------
AttributeError                            Traceback (most recent call last)
<ipython-input-48-ca1a0b12359a> in <module>()
----> 1 x.intersect(y)

AttributeError: 'tuple' object has no attribute 'intersect'

In [49]: 
